<resources>
    <string name="app_name">MyNews</string>
    <string name="notification">notification</string>
    <string name="search">search</string>
    <string name="help">help</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mostpopular">Most Popular</string>
    //Checkboxes
    <string name="Business">Business</string>
    <string name="Technology">Technology</string>
    <string name="Food">Food</string>
    <string name="Sports">Sports</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="search_btn">Search</string>
    <string name="switch_notifications_once_per_day">Enable notifications (once per day)</string>
</resources>
