<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search_activity">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/begin_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/begin_date"
        app:layout_constraintBottom_toTopOf="@id/checkBox_search"
        app:layout_constraintEnd_toStartOf="@id/end_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        app:layout_constraintBottom_toTopOf="@id/checkBox_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/begin_date"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <include
        android:id="@+id/checkBox_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_query_checkbox"
        app:layout_constraintTop_toBottomOf="@id/begin_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_search"
        />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPersoDark"
        android:text="@string/search_btn"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBox_search"
        app:layout_constraintTop_toBottomOf="@id/checkBox_search" />

    <include
        android:id="@+id/rv_search_article"
        layout="@layout/article_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search" />


</androidx.constraintlayout.widget.ConstraintLayout>