...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.NotificationActivity"
    android:id="@+id/notification_activity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    layout="@layout/item_query_checkbox"
    app:layout_constraintTop_toBottomOf="@id/search_view"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/switch1"/>



    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
...
